2020-09-10 catering.py in display heading callname employee showed for switching between employees.
2020-09-13 full_catering.backup some buttons text applied
2020-09-13 catering.py by seatsArrange removed evenb seats occurences, for problems counting even occurences between several clients and callnames.
2020-09-14 catering.py bug solved by switching clients between same employee by applying first line of articles.
2020-09-15 catering.py thoroughly tested with seats tables, seems to operate smoothly now!
2020-09-17 full_catering.backup in table tables_layout removed unused column barcodeID
2020-09-17 catering.py in module seatsArrange unused tablelist list removed
2020-09-17 catering.py gatering orderlines by switching employee fixed
2020-09-18 catering.py disabled scanning products after switching employee clients before selecting switched employee and client.
2020-09-18 catering.py assigned definitions to module changeArticle ordering_manual and supplierID.
2020-09-18 full_catering.backup added loss items and avery label as example insert for commercial barcode.
2020-09-19 catering.py corrected type error in info
2020-09-19 catering.py blocked payments after switching employee-clients and not yet logged on switched employee.
2020-09-19 catering.py after switching employee-clients replacement emptying ordering display
2020-09-19 catering.py after paying or switching empty caches for cash payments in modest calculator
2020-09-20 catering.py module requestLoss added view item_price
2020-09-20 catering.py unused module bookingLoss Menu removed
2020-09-20 catering.py modest calculator also removed caches by no transactions
2020-09-21 catering.py color closeButton after pay changed
2020-09-22 catering.py several modules by tabelview clicking on first column table definition moved after idx.column==0 to avoid wrong selections
2020-09-22 catering.py removed bug by selecting suppliers in module all orders view purchasemenu.